wip: delete alias
